--- a/app/index.html
+++ b/app/index.html
@@ -7,19 +7,34 @@
 </head>
 <body data-ng-app="omniApp">
   <header>
-    <h1>
+    <h1>Omnifilter</h1>
   <header>
 
-<section id="container">
+<section id="container"> <!--This is the container for the whole page -->
 
-  <article></article>
+  <section class="filter_box"> <!--This is the container for the FILTERS section -->
+    <form action="" class="filter_buttons">
+      <input type="radio" name="filter" value="Black_and_White"> Black and White<br>
+      <input type="radio" name="filter" value="Sepia"> Sepia<br>
+      <input type="radio" name="filter" value="Invert"> Invert Colors
+      <input type="radio" name="filter" value="Salmonify"> Salmonify
+    </form>
+  </section>
 
-  <main></main>
-
-  <article></article>
+  <!-- <section class="save_and_share_box">  -->
+    <!--This is the container for the SAVE AND SHARE section -->
+    <!-- <form action="" class="filter_buttons">
+      <input type="radio" name="filter" value="Black_and_White"> Black and White<br>
+      <input type="radio" name="filter" value="Sepia"> Sepia<br>
+      <input type="radio" name="filter" value="Invert"> Invert Colors
+      <input type="radio" name="filter" value="Salmonify"> Salmonify
+    </form>   -->
+  <!-- </section> -->
 
 </section>
+<main></main>
 
+<article></article>
 <footer>
   <h2>© OmniFilter 2016<h2>
 </footer>
