added Save and Share section, plus filesaver and blob js files needed for saving files

--- a/app/index.html
+++ b/app/index.html
@@ -1,43 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>OmniFilter</title>
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,800' rel='stylesheet' type='text/css'>
+  <!-- NEEDS WORK: add css file links here -->
 </head>
+
 <body data-ng-app="omniApp">
   <header>
     <h1>Omnifilter</h1>
   <header>
 
-<section id="container"> <!--This is the container for the whole page -->
+  <!--This is the container for the whole page -->
+  <section id="container">
 
-  <section class="filter_box"> <!--This is the container for the FILTERS section -->
-    <form action="" class="filter_buttons">
-      <input type="radio" name="filter" value="Black_and_White"> Black and White<br>
-      <input type="radio" name="filter" value="Sepia"> Sepia<br>
-      <input type="radio" name="filter" value="Invert"> Invert Colors
-      <input type="radio" name="filter" value="Salmonify"> Salmonify
-    </form>
-  </section>
+    <!--This is the container for the FILTERS section -->
+    <section class="filter_box">
+      <form action="" class="filter_buttons">
+        <input type="radio" name="filter" value="Black_and_White"> Black and White<br>
+        <input type="radio" name="filter" value="Sepia"> Sepia<br>
+        <input type="radio" name="filter" value="Invert"> Invert Colors
+        <input type="radio" name="filter" value="Salmonify"> Salmonify
+      </form>
+    </section>
 
-  <!-- <section class="save_and_share_box">  -->
     <!--This is the container for the SAVE AND SHARE section -->
-    <!-- <form action="" class="filter_buttons">
-      <input type="radio" name="filter" value="Black_and_White"> Black and White<br>
-      <input type="radio" name="filter" value="Sepia"> Sepia<br>
-      <input type="radio" name="filter" value="Invert"> Invert Colors
-      <input type="radio" name="filter" value="Salmonify"> Salmonify
-    </form>   -->
-  <!-- </section> -->
+    <section class="save_and_share_box">
+      <!-- NEEDS WORK: insert FB share code from https://developers.facebook.com/docs/plugins/share-button-->
+      <!-- NEEDS WORK: insert Twitter share code https://about.twitter.com/resources/buttons#tweet -->
 
-</section>
-<main></main>
+      <!-- NEEDS WORK: insert OmniWall share code here -->
+      <p>Share on OmniWall!</p>
 
-<article></article>
-<footer>
-  <h2>© OmniFilter 2016<h2>
-</footer>
+      <!-- NEEDS WORK: Email, needs link to settings page containing email address -->
+      <p>
+        <a href="mailto:genetroy@hotmail.com?Subject=New%20Pic%20From%20Omnifilter" target="_top">Send Mail</a>
+      </p>
+      <!-- NEEDS WORK: insert DropBox share code here. For URL of file to be
+      generated, we need a way to change the file name so that the nothing gets overwritten.
+      Also, it would be nice to send the user name and file creation date to mongo.
+      Dev notes are here https://www.dropbox.com/developers/saver -->
+      <a href="URL OF FILE TO BE ADDED" class="dropbox-saver"></a>
 
+      <!-- NEEDS WORK: insert Local HD save code here.
+      Filesaver notes are here https://github.com/energene/FileSaver.js
+      Filesaver.js is in the /app/js directory
+      Blob notes are here https://github.com/energene/Blob.js
+      Blob.js is in the /app/js directory-->
+
+    </section><!-- End of Save and Share section -->
+
+</section><!--End tag for the container for the whole page -->
+  <main></main>
+
+  <article></article>
+  <footer>
+    <h2>© OmniFilter 2016<h2>
+  </footer>
+
+  <script type="text/javascript" src="https://www.dropbox.com/static/api/2/dropins.js" id="dropboxjs" data-app-key="pa4xdc272nqrnqx"></script>
 </body>
+
 </html>
