finish front end templates

--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,8 @@
   <title>OmniFilter</title>
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,800' rel='stylesheet' type='text/css'>
   <!-- NEEDS WORK: add css file links here -->
-  <link rel="stylesheet" href="/css/base.css"><!-- This needs to be created -->
+  <link rel="stylesheet" href="/css/base.css">
+  <!-- SMACSS needs to be created -->
 </head>
 
 <body data-ng-app="omnifilterApp">
@@ -23,11 +24,11 @@
         <input type="radio" name="filter" value="Black_and_White"> Black and White<br>
         <input type="radio" name="filter" value="Sepia"> Sepia<br>
         <input type="radio" name="filter" value="Invert"> Invert Colors
-        <input type="radio" name="filter" value="Salmonify"> Salmonify
+        <input type="radio" name="filter" value="Salmonsify"> Salmonify
       </form>
     </section>
 
-    <!--This is the container for the SAVE AND SHARE section -->
+    <!--This is the container for the SAVE AND S`HARE section -->
     <section class="save_and_share_box">
       <!-- NEEDS WORK: insert FB share code from https://developers.facebook.com/docs/plugins/share-button-->
       <!-- NEEDS WORK: insert Twitter share code https://about.twitter.com/resources/buttons#tweet -->
@@ -108,7 +109,7 @@
       </photo>
     </ul>
 
-  
+
   </section>
 
 
