--- a/app/js/photos/directives/photo_form_directive.html
+++ b/app/js/photos/directives/photo_form_directive.html
@@ -1,21 +1,18 @@
-<form data-ng-submit="save(photo)">
-  <label for="author">Name:</label>
-  <input type="text" name="author" data-ng-model="photo.author">
-
-  <!-- what is the right input type? -->
-  <label for="dateCreated">Date Created:</label>
-  <input type="text" name="Date Created" data-ng-model="photo.dateCreated">
-
-  <label for="Title">Title:</label>
-  <input type="text" name="title" data-ng-model="photo.title">
-
-<!-- what is the right input type? -->
-  <label for="Tags">Title:</label>
-  <input type="text" name="tags" data-ng-model="photo.tags">
-
-  <label for="Location">Title:</label>
-  <input type="text" name="location" data-ng-model="photo.location">
-
-  <ng-transclude></ng-transclude>
-  <button type="submit">{{buttonText}}</button>
-</form>
+module.exports = function(app) {
+  app.directive('photoForm', function() {
+    return {
+      restrict: 'EAC',
+      replace: true,
+      transclude: true,
+      templateUrl: '/templates/photos/directives/photo_form_directive.html',
+      scope: {
+        buttonText: '@',
+        photo: '=',
+        save: '&'
+      },
+      controller: function($scope) {
+        $scope.photo = $scope.photo || {author: 'author'};
+      }
+    };
+  });
+};
