--- a/app/js/users/directives/user_form_directive.html
+++ b/app/js/users/directives/user_form_directive.html
@@ -1,13 +1,18 @@
-<form data-ng-submit="save(user)">
-  <label for="user">Name:</label>
-  <input type="text" name="name" data-ng-model="user.name">
-
-  <label for="email">email:</label>
-  <input type="text" name="Email" data-ng-model="user.email">
-
-  <label for="password">Password:</label>
-  <input type="text" name="password" data-ng-model="user.password">
-
-  <ng-transclude></ng-transclude>
-  <button type="submit">{{buttonText}}</button>
-</form>
+module.exports = function(app) {
+  app.directive('userForm', function() {
+    return {
+      restrict: 'EAC',
+      replace: true,
+      transclude: true,
+      templateUrl: '/templates/users/directives/user_form_directive.html',
+      scope: {
+        buttonText: '@',
+        user: '=',
+        save: '&'
+      },
+      controller: function($scope) {
+        $scope.user = $scope.user || {author: 'author'};
+      }
+    };
+  });
+};
