--- a/app/index.html
+++ b/app/index.html
@@ -11,27 +11,39 @@
 
 <body data-ng-app="omnifilterApp">
   <header>
-    <h1>Omnifilter!!!!</h1>
+    <h1>Omnifilter</h1>
   <header>
 
   <!--This is the container for the whole page -->
-  <section class="container">
+  <section class="Grid">
 
     <!--This is the container for the FILTERS section -->
     <!-- Add functionality to radio buttons -->
-    <!-- get rid of breaks in CSS -->
-    <section class="filter_box">
-      <form action="" class="filter_buttons">
-        <input type="radio" name="Black_and_White" value="Black_and_White" > Black and White <br>
-        <input type="radio" name="Sepia" value="Sepia"> Sepia<br>
-        <input type="radio" name="Invert" value="Invert"> Invert Colors<br>
-        <input type="radio" name="Salmonsify" value="Salmonsify"> Salmonify<br>
-      </form>
-    </section>
+    <!-- get rid of breaks, use CSS instead -->
+    <section class="Grid-cell" ng-controller="NEED A CONTROLLER HERE">
+      <form action="DO A GET REQUEST TO /FILTER" class="Grid-cell">
+
+    <radiogroup>
+      <!-- ng-model="filter.name" PUT SOMETHING HERE TO DATA-BIND TO
+      name="Sepia"
+      value="Sepia"
+      ng-change="Sepia">
+      Sepia<br> -->
+
+      <radio id="Sepia" label="Sepia" accesskey="S"/>
+      <radio id="Gaussian" label="Gaussian" accesskey="G"/>
+      <radio id="Black_and_White" label="Black_and_White"  accesskey="B" selected="true"/>
+
+    </radiogroup>
+    </form>
+  </section>
 
     <!--This is the container for the SAVE AND SHARE section -->
     <section class="save_and_share_box">
       <!-- NEEDS WORK: insert FB share code from https://developers.facebook.com/docs/plugins/share-button-->
+
+
+
       <!-- NEEDS WORK: insert Twitter share code https://about.twitter.com/resources/buttons#tweet -->
 
       <!-- NEEDS WORK: insert OmniWall share code here -->
@@ -39,7 +51,7 @@
 
       <!-- NEEDS WORK: Email, needs link to settings page containing email address -->
       <p>
-        <a href="mailto:{{email}}?Subject=New%20Pic%20From%20Omnifilter" target="_top">Send Mail</a>
+        <a href="mailto:{{user.email}}?Subject=New%20Pic%20From%20Omnifilter" target="_top">Send Mail</a>
       </p>
       <!-- NEEDS WORK: insert DropBox share code here. For URL of file to be
       generated, we need a way to change the file name so that the nothing gets overwritten.
