work on angular

--- a/app/index.html
+++ b/app/index.html
@@ -4,126 +4,17 @@
 <head>
   <meta charset="UTF-8">
   <title>OmniFilter</title>
-  <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,800' rel='stylesheet' type='text/css'>
-<!-- NEEDS WORK: add SMACSS files linkssss here -->
   <link rel="stylesheet" href="/css/base.css">
+  <link rel="stylesheet" href="/css/flex.css">
+  <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,800' rel='stylesheet' type='text/css'>
 </head>
 
 <body data-ng-app="omnifilterApp">
-  <header>
-    <h1>Omnifilter</h1>
-  <header>
-
-  <!--This is the container for the whole page -->
-  <section class="Grid">
-
-    <!--This is the container for the FILTERS section -->
-    <!-- Add functionality to radio buttons -->
-    <!-- get rid of breaks, use CSS instead -->
-    <section class="Grid-cell" ng-controller="NEED A CONTROLLER HERE">
-      <form action="DO A GET REQUEST TO /FILTER" class="Grid-cell">
-
-    <radiogroup>
-      <!-- ng-model="filter.name" PUT SOMETHING HERE TO DATA-BIND TO
-      name="Sepia"
-      value="Sepia"
-      ng-change="Sepia">
-      Sepia<br> -->
-
-      <radio id="Sepia" label="Sepia" accesskey="S"/>
-      <radio id="Gaussian" label="Gaussian" accesskey="G"/>
-      <radio id="Black_and_White" label="Black_and_White"  accesskey="B" selected="true"/>
-
-    </radiogroup>
-    </form>
+  <section data-ng-controller="authController" data-ng-init="updateUsername()">
+    <header>
+      <p data-ng-if="username">{{'Hello ' + username}} <a href data-ng-click="logout()">logout</a></p>
+    </header>
+    <main data-ng-view>
+    </main>
   </section>
-
-    <!--This is the container for the SAVE AND SHARE section -->
-    <section class="save_and_share_box">
-      <!-- NEEDS WORK: insert FB share code from https://developers.facebook.com/docs/plugins/share-button-->
-
-
-
-      <!-- NEEDS WORK: insert Twitter share code https://about.twitter.com/resources/buttons#tweet -->
-
-      <!-- NEEDS WORK: insert OmniWall share code here -->
-      <p>Share on OmniWall!</p>
-
-      <!-- NEEDS WORK: Email, needs link to settings page containing email address -->
-      <p>
-        <a href="mailto:{{user.email}}?Subject=New%20Pic%20From%20Omnifilter" target="_top">Send Mail</a>
-      </p>
-      <!-- NEEDS WORK: insert DropBox share code here. For URL of file to be
-      generated, we need a way to change the file name so that the nothing gets overwritten.
-      Also, it would be nice to send the user name and file creation date to mongo.
-      Dev notes are here https://www.dropbox.com/developers/saver -->
-      <a href="URL OF FILE TO BE ADDED" class="dropbox-saver"></a>
-
-      <!-- NEEDS WORK: insert Local HD save code here.
-      Filesaver notes are here https://github.com/energene/FileSaver.js
-      Filesaver.js is in the /app/js directory
-      Blob notes are here https://github.com/energene/Blob.js
-      Blob.js is in the /app/js directory-->
-    </section><!-- End of Save and Share section -->
-
-    <!--This is the container for the NAV section -->
-    <nav class="nav_box">
-
-    </nav>
-
-    <!--This is the container for the PIC PREVIEW section -->
-    <!-- NEEDS WORK: make a box to contain the preview pic -->
-
-    <!-- This is the form that appears under the preview -->
-    <section class="save_and_share_box">
-      <photo data-photo-data="newPhoto">
-        <photo-form
-          data-button-text="Create New Photo Project"
-          data-photo="newPhoto"
-          data-save="createPhoto(newPhoto)"
-        ></photo-form>
-      </photo>
-    </section>
-
-</section><!--End tag for the container for the whole page -->
-  <main></main>
-
-  <article></article>
-
-  <footer><h2>© OmniFilter 2016<h2></footer>
-  <script type="text/javascript" src="https://www.dropbox.com/static/api/2/dropins.js" id="dropboxjs" data-app-key="pa4xdc272nqrnqx"></script>
-  <script src="bundle.js"></script>
 </body>
-
-</html>
-
-
-
-
-
-
-
-  <section data-ng-controller="OmnifilterController" data-ng-init="getAll()">
-
-    <!-- NEEDS WORK: Expose this section when My Photos is clicked on the NavBar -->
-    <h1>Omnifilter--My Photos</h1>
-    <ul>
-      <photo data-ng-repeat="photo in photos" data-photo-data="photo">
-        <button data-ng-click="deletePhoto(photo)">Delete Photo</button>
-        <button data-ng-if="!photo.editing" data-ng-click="toggleEdit(photo)">Update Photo Info</button>
-        <photo-form
-          data-ng-if="photo.editing"
-          data-save="updatePhoto(photo)"
-          data-button-text="Update Photo Info"
-          data-photo="photo"
-        >
-          <button type="button" data-ng-click="toggleEdit(photo)">Cancel</button>
-        </photo-form>
-      </photo>
-    </ul>
-
-
-  </section>
-
-
-</section>
