--- a/app/index.html
+++ b/app/index.html
@@ -1,20 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-  <meta charset="UTF-8">
-  <title>OmniFilter</title>
-  <link rel="stylesheet" href="/css/base.css">
-  <link rel="stylesheet" href="/css/flex.css">
-  <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,800' rel='stylesheet' type='text/css'>
-</head>
+  <head>
+    <meta charset="UTF-8">
+    <title>OmniFilter</title>
+    <link rel="stylesheet" href="/css/base.css">
+    <link rel="stylesheet" href="/css/flex.css">
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,800' rel='stylesheet' type='text/css'>
+  </head>
 
-<body data-ng-app="omnifilterApp">
-  <section data-ng-controller="authController" data-ng-init="updateUsername()">
-    <header>
-      <p data-ng-if="username">{{'Hello ' + username}} <a href data-ng-click="logout()">logout</a></p>
-    </header>
-    <main data-ng-view>
-    </main>
-  </section>
-</body>
+  <body data-ng-app="omnifilterApp">
+    <section data-ng-controller="authController" data-ng-init="updateUsername()">
+      <header>
+        <p data-ng-if="username">{{'Hello ' + username}} <a href data-ng-click="logout()">logout</a></p>
+      </header>
+      <main data-ng-view>
+      </main>
+    </section>
+    <script src="bundle.js"></script>
+  </body>
+</html>
